--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/i18n": "^7.2.0",
+    "@nuxtjs/robots": "^2.5.0",
     "contentful": "^9.1.18",
     "core-js": "^3.21.1",
     "nuxt": "^2.15.8",
@@ -51,6 +52,7 @@
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.5.0",
     "lint-staged": "^12.1.2",
+    "nuxt-compress": "^5.0.0",
     "postcss": "^8.4.6",
     "postcss-html": "^1.3.0",
     "prettier": "^2.5.1",
